[package]
name = "vqf-cxx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#autocxx = "0.22"
autocxx = { git = "https://github.com/kitlith/autocxx", branch = "no_std" }
cxx = { version = "1.0.78", default-features = false }
nalgebra = { version = "0.30", default-features = false }

[build-dependencies]
#autocxx-build = "0.22"
autocxx-build = { git = "https://github.com/kitlith/autocxx", branch = "no_std" }
miette = { version="5", features=["fancy"] } # optional but gives nicer error messages!
#dunce = "1.0"
normpath = "0.3"
