[package]
name = "vqf-cxx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.23.1"
cxx = { version = "1.0.78", default-features = false }
nalgebra = { version = "0.30", default-features = false }
#link-cplusplus = { version = "1.0", features = ["nothing"] }

[build-dependencies]
#cxx-build = "1.0"
#miette = { version="4.3", features=["fancy"] } # optional but gives nicer error messages!
#normpath = "1.0.1"
cc = "*"