[package]
name = "vqf-cxx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.23"
cxx = "1.0"
nalgebra = "0.30"

[build-dependencies]
autocxx-build = "0.23"
miette = { version="5.5", features=["fancy"] } # optional but gives nicer error messages!